<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/shapdesign">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="cursive"
            android:gravity="center"
            android:text="@string/Farz"
            android:textColor="#fff"
            android:textSize="30dp"
            android:textStyle="bold">

        </TextView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_weight="2.2"
        android:gravity="center"
        android:layout_height="0dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_marginLeft="20dp"
            android:layout_weight=".3"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:layout_height="0dp">
            <ImageView
                android:layout_width="0dp"
                android:layout_weight=".8"
                android:layout_marginLeft="20dp"
                android:layout_height="110dp"
                android:background="@drawable/islmicapp">

            </ImageView>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginLeft="30dp"
                android:text="@string/nazam"
                android:gravity="center"
                android:onClick="namaz"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:layout_height="100dp">

            </TextView>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight=".3"
            android:layout_marginTop="20dp"
            android:layout_height="0dp">
            <TextView
                android:layout_width="0dp"
                android:layout_weight=".8"
                android:layout_marginLeft="20dp"
                android:text="@string/wazu"
                android:onClick="wazu"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:gravity="center"
                android:layout_height="100dp">

            </TextView>
            <ImageView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginLeft="30dp"
                android:gravity="center"
                android:textSize="20sp"
                android:layout_height="110dp"
                android:textColor="@color/black"
                android:background="@drawable/islmicapp">

            </ImageView>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_marginLeft="20dp"
            android:onClick="qibla"
            android:layout_marginRight="20dp"
            android:layout_weight=".3"
            android:layout_marginTop="20dp"
            android:layout_height="0dp">
            <ImageView
                android:layout_width="0dp"
                android:layout_weight=".8"
                android:layout_marginLeft="20dp"
                android:background="@drawable/islmicapp"
                android:layout_height="120dp">

            </ImageView>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginLeft="30dp"
                android:text="@string/qibla"
                android:gravity="center"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:layout_height="100dp">

            </TextView>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight=".3"
            android:layout_marginTop="20dp"
            android:layout_height="0dp">
            <TextView
                android:layout_width="0dp"
                android:layout_weight=".8"
                android:layout_marginLeft="20dp"
                android:text="@string/duwa"
                android:onClick="cartoonactivity"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:gravity="center"
                android:layout_height="100dp">

            </TextView>
            <ImageView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginLeft="30dp"
                android:gravity="center"
                android:textSize="20sp"
                android:layout_height="110dp"
                android:textColor="@color/black"
                android:background="@drawable/islmicapp">

            </ImageView>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight=".3"
            android:layout_marginTop="20dp"
            android:layout_height="0dp">
            <ImageView
                android:layout_width="0dp"
                android:layout_weight=".8"
                android:layout_marginLeft="20dp"
                android:background="@drawable/islmicapp"
                android:layout_height="120dp">

            </ImageView>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginLeft="30dp"
                android:text="@string/quiz"
                android:gravity="center"
                android:textSize="20sp"
                android:onClick="quiz"
                android:textColor="@color/black"
                android:layout_height="100dp">

            </TextView>

        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight=".1"
        android:layout_marginTop="10dp"
        android:background="@drawable/shapdesign"
        android:layout_height="0dp">

    </LinearLayout>
</LinearLayout>