<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/redcolor"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:weightSum="2"
        android:orientation="horizontal"
        android:background="@drawable/shapdesign">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_weight="1.7"
            android:text="@string/Namaz"
            android:textColor="#fff"
            android:textSize="20sp"
            android:textStyle="bold">

        </TextView>
        <ImageView
            android:layout_width="30dp"
            android:layout_gravity="center"
            android:layout_weight="0"
            android:background="@drawable/compasss"
            android:layout_height="30dp">

        </ImageView>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:layout_weight="1"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/frame">

            <VideoView
                android:id="@+id/first_video"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:padding="10dp">

            </VideoView>
        </FrameLayout>


        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="100dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:drawableLeft="@drawable/vdo"
            android:padding="2dp"
            android:background="@color/appcolor"
            android:text="Play"
            android:onClick="play_animation"
            android:textColor="#fff"
            android:textSize="16sp">

        </Button>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_weight=".4"
        android:layout_height="0dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="20sp"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="match_parent"
                    android:text="@string/wazu_des"
                    android:gravity="center"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:textColor="@color/appcolor"
                    android:padding="20sp"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    android:layout_height="match_parent">

                </TextView>


            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="4dp"
                app:cardCornerRadius="10dp"
                app:cardBackgroundColor="@color/white"
                android:layout_height="wrap_content">
                <LinearLayout
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    xmlns:tools="http://schemas.android.com/tools"
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="3dp"
                    android:weightSum="5"
                    android:layout_height="match_parent"
                    tools:context=".BoyGirlPanel.splashScreen.MainActivity">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_weight="1"
                        android:orientation="horizontal"
                        android:weightSum="3"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="4dp"
                        android:layout_marginRight="10dp"
                        android:layout_height="0dp">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:text="@string/Fajr"
                            android:gravity="center"
                            android:textStyle="bold"
                            android:textSize="17sp"
                            android:textColor="@color/appcolor"
                            android:id="@+id/time1"
                            android:layout_height="match_parent">

                        </TextView>
                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:textStyle="bold"
                            android:textSize="17sp"
                            android:textColor="@color/appcolor"
                            android:text="00:00"
                            android:gravity="center"
                            android:id="@+id/show_time_1"
                            android:layout_height="match_parent">

                        </TextView>
                        <Switch
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:id="@+id/switch_1"

                            android:layout_height="match_parent">

                        </Switch>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_weight="1"
                        android:orientation="horizontal"
                        android:weightSum="3"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="4dp"
                        android:layout_marginRight="10dp"
                        android:layout_height="0dp">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:text="@string/Zuhar"
                            android:textStyle="bold"
                            android:textSize="17sp"
                            android:textColor="@color/appcolor"
                            android:gravity="center"
                            android:id="@+id/time2"
                            android:layout_height="match_parent">

                        </TextView>
                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:text="00:00"
                            android:gravity="center"
                            android:id="@+id/show_time_2"
                            android:textStyle="bold"
                            android:textSize="17sp"
                            android:textColor="@color/appcolor"
                            android:layout_height="match_parent">

                        </TextView>
                        <Switch
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:id="@+id/switch_2"
                            android:layout_height="match_parent">

                        </Switch>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_weight="1"
                        android:orientation="horizontal"
                        android:weightSum="3"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="4dp"
                        android:layout_marginRight="10dp"
                        android:layout_height="0dp">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:text="@string/Asar"
                            android:textStyle="bold"
                            android:textSize="17sp"
                            android:textColor="@color/appcolor"
                            android:gravity="center"
                            android:id="@+id/time3"
                            android:layout_height="match_parent">

                        </TextView>
                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:text="00:00"
                            android:textStyle="bold"
                            android:textSize="17sp"
                            android:textColor="@color/appcolor"
                            android:gravity="center"
                            android:id="@+id/show_time_3"
                            android:layout_height="match_parent">

                        </TextView>
                        <Switch
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:id="@+id/switch_3"
                            android:layout_height="match_parent">

                        </Switch>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_weight="1"
                        android:orientation="horizontal"
                        android:weightSum="3"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="4dp"
                        android:layout_marginRight="10dp"
                        android:layout_height="0dp">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:textStyle="bold"
                            android:textSize="17sp"
                            android:text="@string/Maghrib"
                            android:textColor="@color/appcolor"
                            android:gravity="center"
                            android:id="@+id/time4"
                            android:layout_height="match_parent">

                        </TextView>
                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:text="00:00"
                            android:gravity="center"
                            android:textStyle="bold"
                            android:textSize="17sp"
                            android:textColor="@color/appcolor"
                            android:id="@+id/show_time_4"
                            android:layout_height="match_parent">

                        </TextView>
                        <Switch
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:id="@+id/switch_4"
                            android:layout_height="match_parent">

                        </Switch>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_weight="1"
                        android:orientation="horizontal"
                        android:weightSum="3"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="4dp"
                        android:layout_marginRight="10dp"
                        android:layout_height="0dp">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:text="@string/Isha"
                            android:gravity="center"
                            android:textStyle="bold"
                            android:textSize="17sp"
                            android:textColor="@color/appcolor"
                            android:id="@+id/time5"
                            android:layout_height="match_parent">

                        </TextView>
                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:text="00:00"
                            android:gravity="center"
                            android:id="@+id/show_time_5"
                            android:textStyle="bold"
                            android:textSize="17sp"
                            android:textColor="@color/appcolor"
                            android:layout_height="match_parent">

                        </TextView>
                        <Switch
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:id="@+id/switch_5"
                            android:layout_height="match_parent">

                        </Switch>
                    </LinearLayout>


                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:background="@drawable/shapdesign">

    </LinearLayout>

</LinearLayout>